# auto_exp

./: .gitignore  README.rst  pyproject.toml  scrapinghub.yml  scrapy.cfg  setup.py
auto_exp/: items.py  middlewares.py  pipelines.py  settings.py
auto_exp/constants/: common_constants.py  yy_constants.py
auto_exp/flaskr/: app.py
auto_exp/flaskr/templates/: index.html
auto_exp/spiders/: yy.py
auto_exp/utilities/: yy_utilities.py
