[tool.poetry]
name = "auto_exp"
version = "0.1.0"
description = ""
authors = ["zeratul0097 <zeratul0097@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
scrapy = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
